fix: guarantee free flow